# redlib

./: Cargo.toml  Dockerfile  README.md  compose.yaml  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  docker-image.yml
static/: style.css
templates/: base.html
