[package]
name = "redlib"
description = " Alternative private front-end to Reddit"
license = "AGPL-3.0-only"
repository = "https://github.com/redlib-org/redlib"
version = "0.36.0"
authors = [
    "Matthew Esposito <matt+cargo@matthew.science>",
    "spikecodes <19519553+spikecodes@users.noreply.github.com>",
]
edition = "2021"
rust-version = "1.81"
default-run = "redlib"

[dependencies]
askama = { version = "0.15.6", default-features = false, features = [
    "std",
    "derive",
] }
cached = { version = "0.59.0", features = ["async"] }
clap = { version = "4.5.60", default-features = false, features = [
    "std",
    "env",
    "derive",
] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
cookie = "0.18.0"
futures-lite = "2.6.1"
hyper = { version = "1.9.0", features = ["full"] }
percent-encoding = "2.3.2"
route-recognizer = "0.3.1"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
time = { version = "0.3.47", features = ["local-offset"] }
url = "2.5.8"
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
libflate = "2.2.1"
brotli = { version = "8.0.2", features = ["std"] }
toml = "0.9.6"
serde_yaml = "0.9.29"
build_html = "2.7.0"
uuid = { version = "1.23.0", features = ["v4"] }
base64 = "0.22.1"
fastrand = "2.0.1"
log = "0.4.29"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
rss = "2.0.7"
arc-swap = "1.9.0"
serde_json_path = "0.7.1"
async-recursion = "1.1.1"
pulldown-cmark = { version = "0.13.3", features = ["simd", "html"], default-features = false }
hyper-tls = { version = "0.6.0" }
openssl = { version = "0.10", features = ["vendored"] }
tegen = "0.1.4"
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.44", default-features = false, features = [ "std" ] }
htmlescape = "0.3.1"
bincode = "3.0.0"
base2048 = "2.0.2"
revision = "0.17.0"
fake_user_agent = "0.2.3"


[dev-dependencies]
lipsum = "0.9.0"
sealed_test = "1.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
